src/objects/Category__c.object
<CustomObject>
    <fields>
        <fullName>Position__c</fullName>
        <label>Position</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Id__c</fullName>
        <externalId>true</externalId>
        <label>Record Id</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Slug__c</fullName>
        <label>Slug</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>Category</label>
    <nameField>
        <label>Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Categorys</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>